# discord-bots

./: .gitignore  pyproject.toml  requirements.txt
server/: casual_bot.py  kakashi_bot.py  oso_bot.py  server.py
